--- a/agent_dev.ipynb
+++ b/agent_dev.ipynb
@@ -334,12 +334,11 @@
     "        #patch[patch==-1] = 1\n",
     "        for x in range(-2,3,1):\n",
     "            for y in range(-2,3,1):\n",
-    "                if pos[0]+x>=0 and pos[0]+x<=23 and pos[1]+y>=0 and pos[1]+y<=23 and self.map_knowns[pos[0],pos[1]]!=1:\n",
-    "                    if self.map_knowns[pos[0]+x,pos[1]+y] !=1:\n",
-    "                        self.map_possibles[pos[0]+x,pos[1]+y] = 1\n",
-    "                        self.map_possibles[abs(pos[1]+y-23),abs(pos[0]+x-23)] = 1\n",
-    "                        self.map_confidence[pos[0]+x,pos[1]+y] = 5/9\n",
-    "                        self.map_confidence[abs(pos[1]+y-23),abs(pos[0]+x-23)] = 5/9\n",
+    "                if pos[0]+x>=0 and pos[0]+x<=23 and pos[1]+y>=0 and pos[1]+y<=23 and self.map_knowns[pos[0]+x,pos[1]+y] !=1:\n",
+    "                    self.map_possibles[pos[0]+x,pos[1]+y] = 1\n",
+    "                    self.map_possibles[abs(pos[1]+y-23),abs(pos[0]+x-23)] = 1\n",
+    "                    self.map_confidence[pos[0]+x,pos[1]+y] = 5/9\n",
+    "                    self.map_confidence[abs(pos[1]+y-23),abs(pos[0]+x-23)] = 5/9\n",
     "        \n",
     "        #self.map_confidence[pos[0]-2:pos[0]+3,pos[1]-2:pos[1]+3] = 9/25\n",
     "        #self.map_confidence[abs(pos[1]-23)-2:abs(pos[1]-23)+3,abs(pos[0]-23)-2:abs(pos[0]-23)+3] = 9/25\n",
@@ -606,51 +605,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "827b5f53-2d0b-44c7-99b2-98479f1b6190",
+   "id": "2aeb7548-b1c6-4d76-8ac8-2386a79da9b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rnge = np.random.randint(1,5)\n",
-    "print(rnge)\n",
-    "p=np.random.randint(0,2)\n",
-    "print(p)\n",
-    "explore_t = [[i,abs(i-23+rnge)] for i in range(23-rnge+1)]\n",
-    "if p==1:\n",
-    "    explore_t = [[abs(t[1]-23),abs(t[0]-23)] for t in explore_t]\n",
-    "a = np.zeros((24,24))\n",
-    "for ii, t in enumerate(explore_t):\n",
-    "    if ii%(rnge+2)==0:\n",
-    "        a[t[0],t[1]] = 1\n",
-    "plt.imshow(a.T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "babd0b0c-c320-487b-a3d1-68aa32537958",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rang = np.random.randint(1,5)\n",
-    "start_pos = [23,23]\n",
-    "a = np.stack((np.repeat(np.arange(24),24,axis=0).reshape((24,24)), np.repeat(np.arange(24),24,axis=0).reshape((24,24)).T),axis=2)\n",
-    "tags = \n",
-    "b = np.zeros((24,24))\n",
-    "for t in tags:\n",
-    "    b[t[0],t[1]] = 1\n",
-    "plt.imshow(b)\n",
-    "print(rang)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76604c95-b840-4843-bc09-960e9578d468",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.random.randint(0,10,(5,5))\n",
-    "print(a[a==5 or a==10])"
+    "for i in range(20):\n",
+    "    x = np.random.randint(0,24)\n",
+    "    y = np.random.randint(0,24-x)\n",
+    "    print(x,y, abs(x-23), abs(y-23), x+y, abs(x-23)+ abs(y-23))"
    ]
   },
   {
@@ -686,6 +648,7 @@
     "        self.relic_node_positions = []\n",
     "        self.discovered_relic_nodes_ids = set()\n",
     "        self.n_units = self.env_cfg[\"max_units\"]\n",
+    "        self.match_num = 1\n",
     "        self.relic_map = RelicMap(self.n_units)\n",
     "        self.tile_map = TileMap()\n",
     "        self.energy_map = EnergyMap()\n",
@@ -724,9 +687,17 @@
     "        self.previous_positions = -np.ones((self.n_units,2))\n",
     "\n",
     "\n",
-    "    def get_explore(self):\n",
-    "        return random.choice(self.explore_choices)\n",
-    "            \n",
+    "    def get_explore(self, current):\n",
+    "        a = np.stack((np.repeat(np.arange(24),24,axis=0).reshape((24,24)), np.repeat(np.arange(24),24,axis=0).reshape((24,24)).T),axis=2)\n",
+    "        a[current!=-1] = [100,100]\n",
+    "        self.explore_choices = a[np.sum(np.abs(a-np.array(self.start_pos)),axis=-1)<24-self.range].tolist()\n",
+    "        if self.explore_choices:\n",
+    "            return random.choice(self.explore_choices)\n",
+    "        else:\n",
+    "            x = np.random.randint(0,24)\n",
+    "            y = np.random.randint(0,24-x)\n",
+    "            return [abs(x-self.start_pos[0]), abs(y-self.start_pos[1])]\n",
+    "\n",
     "    def get_moves(self, obs, unit_id, unit_pos):\n",
     "        prev_pos = [unit_pos[0] - direction_to_change(self.prev_actions[unit_id][0])[0], unit_pos[1] - direction_to_change(self.prev_actions[unit_id][0])[1]]\n",
     "        new_pos = [[unit_pos[0], unit_pos[1]-1],\n",
@@ -773,6 +744,7 @@
     "        \n",
     "    \n",
     "    def reset(self):\n",
+    "        self.match_num += 1\n",
     "        self.relic_map.reset()\n",
     "        self.explore_targets = []\n",
     "        self.unit_has_target = -np.ones((self.n_units)) # -1=no target; 0=explore target; 1=relic target; 2=on relic, 3=known fragment\n",
@@ -792,6 +764,12 @@
     "        #print(self.fragment_locations, self.possible_locations)\n",
     "        # TODO target closet first\n",
     "        targets = self.fragment_locations+self.possible_locations\n",
+    "        attack_targets = self.get_attack_targets()\n",
+    "        n_explore_units = 0\n",
+    "        if self.match_num==2:\n",
+    "            n_explore_units = 3\n",
+    "        elif self.match_num==3:\n",
+    "            n_explore_units = 2\n",
     "        for unit in range(self.n_units):\n",
     "            if unit<len(targets):\n",
     "                target = targets[unit]\n",
@@ -800,16 +778,17 @@
     "                self.unit_path[unit],_ = a_star(self.start_pos, target, self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
     "                self.unit_path[unit].pop(0)\n",
     "            else:\n",
-    "                if self.fragment_locations:\n",
-    "                    target = self.fragment_locations[unit%len(self.fragment_locations)]\n",
-    "                    self.unit_targets[unit] = target\n",
-    "                    self.unit_has_target[unit] = 3\n",
+    "                if not attack_targets or n_explore_units>0:\n",
+    "                    target = self.get_explore(-np.ones((24,24)))\n",
+    "                    self.unit_has_target[unit] = 0\n",
     "                    self.unit_targets[unit] = target\n",
     "                    self.unit_path[unit],_ = a_star(self.start_pos, target, self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
     "                    self.unit_path[unit].pop(0)\n",
-    "                else:\n",
-    "                    target = self.get_explore()\n",
-    "                    self.unit_has_target[unit] = 0\n",
+    "                    n_explore_units -= 1\n",
+    "                else:#self.fragment_locations:\n",
+    "                    target = attack_targets[unit%len(attack_targets)]\n",
+    "                    self.unit_targets[unit] = target\n",
+    "                    self.unit_has_target[unit] = 3\n",
     "                    self.unit_targets[unit] = target\n",
     "                    self.unit_path[unit],_ = a_star(self.start_pos, target, self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
     "                    self.unit_path[unit].pop(0)\n",
@@ -940,7 +919,7 @@
     "                self.relic_targets.extend(self.relic_map.get_possibles(self.start_pos, own=True))\n",
     "                # remove duplicates from relic targets\n",
     "                self.relic_targets = list({array.tobytes(): array for array in np.array(self.relic_targets)}.values())\n",
-    "                print(self.unit_has_target, np.array(self.unit_targets), np.array(self.relic_targets))\n",
+    "                #print(step, self.discovered_relic_nodes_ids, \"\\n\", self.relic_targets, \"\\n\",  self.unit_has_target, \"\\n\",  self.unit_targets)\n",
     "        # update maps\n",
     "        available_unit_ids = np.where(unit_mask)[0].tolist()\n",
     "        self.relic_map.step(unit_positions, increase)\n",
@@ -992,7 +971,7 @@
     "                for unit2 in remain_units:\n",
     "                    if self.unit_targets[unit2][0]==pos[0] and self.unit_targets[unit2][1]==pos[1] and self.unit_has_target[unit]!=3:\n",
     "                        self.unit_has_target[unit2] = -1\n",
-    "            # retard def units\n",
+    "            # retarget def units\n",
     "            if self.unit_has_target[unit]==3 and self.compare_positions(self.unit_targets[unit],pos):\n",
     "                if self.fragment_locations:\n",
     "                    target = self.get_defend_targets(self.fragment_locations[unit%len(self.fragment_locations)])\n",
@@ -1015,10 +994,10 @@
     "                        self.occupied_fragments.remove([int(self.unit_targets[unit][0]),int(self.unit_targets[unit][1])])\n",
     "                self.unit_has_target[unit] = -1\n",
     "                self.unit_moved[unit] = 0\n",
-    "            # free unit that's on target and not occupying fragment\n",
-    "            if self.unit_has_target[unit]<2 and self.unit_targets[unit][0]==pos[0] and self.unit_targets[unit][1]==pos[1]:\n",
+    "            # free unit that's on target and not occupying fragment (NOT DONE ANYMORE TO KEEP UNIT TYPE)\n",
+    "            #if self.unit_has_target[unit]<2 and self.unit_targets[unit][0]==pos[0] and self.unit_targets[unit][1]==pos[1]:\n",
     "                #print(\"unit at target\", unit)\n",
-    "                self.unit_has_target[unit]=-1\n",
+    "            #    self.unit_has_target[unit]=-1\n",
     "            # untarget if target is asteroid, keep track of blocked targets to reuse when shift happens\n",
     "            if self.tile_map.map[int(self.unit_targets[unit][0]),int(self.unit_targets[unit][1])]==2 and not self.compare_positions(pos,self.unit_targets[unit]):\n",
     "            #print(\"blocked by asteroid\")\n",
@@ -1061,27 +1040,28 @@
     "        # only keep targets that aren't exploring\n",
     "        for unit in available_unit_ids.copy():\n",
     "            if self.unit_has_target[unit]==0 or self.unit_has_target[unit]==3:\n",
-    "                available_unit_ids.remove(unit)\n",
-    "                \n",
+    "                if not self.compare_positions(unit_positions[unit], self.unit_targets[unit]):\n",
+    "                    available_unit_ids.remove(unit)\n",
+    "\n",
+    "        attack_targets = self.get_attack_targets()\n",
     "        # send remaining units to explore (first match) or target \n",
-    "        if step<102:\n",
-    "            for unit in available_unit_ids.copy():\n",
-    "                target = self.get_explore()\n",
+    "        for unit in available_unit_ids.copy():\n",
+    "            if self.unit_has_target[unit]!=0 and attack_targets:\n",
+    "                target_id, path = self.find_best_unit(unit_positions[unit], np.arange(len(attack_targets)), attack_targets)\n",
+    "                if path:\n",
+    "                    self.unit_path[unit] = path[::-1]\n",
+    "                self.unit_path[unit].append(attack_targets[target_id])\n",
+    "                self.unit_has_target[unit] = 3\n",
+    "                self.unit_targets[unit] = attack_targets[target_id]\n",
+    "            else:\n",
+    "                target = self.get_explore(current_tile_map)\n",
     "                path, _ = a_star(unit_positions[unit], target, self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
     "                available_unit_ids.remove(unit)\n",
     "                self.unit_path[unit] = path[1:]\n",
     "                self.unit_has_target[unit] = 0\n",
     "                self.unit_targets[unit] = target\n",
-    "        else:\n",
-    "            targets = self.get_attack_targets()\n",
-    "            if targets:\n",
-    "                for unit in available_unit_ids:\n",
-    "                    target_id, path = self.find_best_unit(unit_positions[unit], np.arange(len(targets)), targets)\n",
-    "                    if path:\n",
-    "                        self.unit_path[unit] = path[::-1]\n",
-    "                    self.unit_path[unit].append(targets[target_id])\n",
-    "                    self.unit_has_target[unit] = 3\n",
-    "                    self.unit_targets[unit] = targets[target_id]\n",
+    "            \n",
+    "            \n",
     "            '''for unit in available_unit_ids:\n",
     "                if self.fragment_locations:\n",
     "                    target = self.get_defend_targets(self.fragment_locations[unit%len(self.fragment_locations)])\n",
@@ -1140,7 +1120,7 @@
    "outputs": [],
    "source": [
     "n = 50\n",
-    "evaluate_agents(Agent2, Agent3, seed=42, games_to_play=n, render=True)"
+    "evaluate_agents(Agent2, Agent3, seed=100, games_to_play=n, render=True)"
    ]
   },
   {
