--- a/agent_dev.ipynb
+++ b/agent_dev.ipynb
@@ -363,16 +363,19 @@
     "                own.append(k)\n",
     "        return own\n",
     "\n",
-    "    def move_away(self, pos):\n",
+    "    def move_away(self, tile_map, pos):\n",
     "        moves = [1,2,3,4]\n",
     "        options = np.array([[pos[0],pos[1]-1],[pos[0]+1,pos[1]],[pos[0],pos[1]+1],[pos[0]-1,pos[1]]])\n",
     "        for ii, option in enumerate(options):\n",
-    "            if np.max(option)>23 or np.min(option)<0:\n",
+    "            if np.max(option)>23 or np.min(option)<0 or (tile_map[option[0],option[1]]==2):\n",
+    "                moves.remove(ii+1)\n",
     "                continue\n",
     "            if self.map_knowns[option[0],option[1]]==1:\n",
     "                return moves[ii]\n",
     "            if self.map_possibles[option[0],option[1]]==0 and self.map_knowns[option[0],option[1]]==0:\n",
     "                return moves[ii]\n",
+    "        if moves:\n",
+    "            return moves[0]\n",
     "        return np.random.randint(1,5)\n",
     "        \n",
     "    def step(self, unit_positions, increase):\n",
@@ -658,6 +661,7 @@
     "        self.nebula_check = 0\n",
     "        \n",
     "        self.range = self.env_cfg[\"unit_sensor_range\"]\n",
+    "        self.sap_range = self.env_cfg[\"unit_sap_range\"]\n",
     "        self.width = self.env_cfg[\"map_width\"]\n",
     "        self.height = self.env_cfg[\"map_height\"]\n",
     "        a = np.stack((np.repeat(np.arange(24),24,axis=0).reshape((24,24)), np.repeat(np.arange(24),24,axis=0).reshape((24,24)).T),axis=2)\n",
@@ -675,7 +679,8 @@
     "        self.locked_fragment_targets = []\n",
     "        self.fragment_locations = []\n",
     "        self.occupied_fragments = []\n",
-    "        \n",
+    "\n",
+    "        self.n_explore_units = 0\n",
     "        self.unit_has_target = -np.ones((self.n_units)) # -1=no target; 0=explore target; 1=relic target; 2=on relic\n",
     "        self.unit_targets = dict(zip(range(0,self.n_units), np.zeros((self.n_units,2))))\n",
     "        self.unit_path = dict(zip(range(0,self.n_units), [[] for i in range(0,self.n_units)]))\n",
@@ -765,11 +770,11 @@
     "        # TODO target closet first\n",
     "        targets = self.fragment_locations+self.possible_locations\n",
     "        attack_targets = self.get_attack_targets()\n",
-    "        n_explore_units = 0\n",
+    "        self.n_explore_units = 0\n",
     "        if self.match_num==2:\n",
-    "            n_explore_units = 3\n",
+    "            self.n_explore_units = 3\n",
     "        elif self.match_num==3:\n",
-    "            n_explore_units = 2\n",
+    "            self.n_explore_units = 2\n",
     "        for unit in range(self.n_units):\n",
     "            if unit<len(targets):\n",
     "                target = targets[unit]\n",
@@ -778,18 +783,17 @@
     "                self.unit_path[unit],_ = a_star(self.start_pos, target, self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
     "                self.unit_path[unit].pop(0)\n",
     "            else:\n",
-    "                if not attack_targets or n_explore_units>0:\n",
+    "                if not attack_targets or self.n_explore_units>0:\n",
     "                    target = self.get_explore(-np.ones((24,24)))\n",
     "                    self.unit_has_target[unit] = 0\n",
     "                    self.unit_targets[unit] = target\n",
     "                    self.unit_path[unit],_ = a_star(self.start_pos, target, self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
     "                    self.unit_path[unit].pop(0)\n",
-    "                    n_explore_units -= 1\n",
+    "                    self.n_explore_units -= 1\n",
     "                else:#self.fragment_locations:\n",
     "                    target = attack_targets[unit%len(attack_targets)]\n",
     "                    self.unit_targets[unit] = target\n",
     "                    self.unit_has_target[unit] = 3\n",
-    "                    self.unit_targets[unit] = target\n",
     "                    self.unit_path[unit],_ = a_star(self.start_pos, target, self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
     "                    self.unit_path[unit].pop(0)\n",
     "                    \n",
@@ -860,12 +864,15 @@
     "        return best_pos\n",
     "        \n",
     "\n",
-    "    def get_enemy_targets(self, pos, enemy_positions):\n",
+    "    def get_enemy_targets(self, pos, enemy_positions, relative=True):\n",
     "        targets = []\n",
-    "        for dx in range(-self.range,self.range):\n",
-    "            for dy in range(-self.range,self.range):\n",
+    "        for dx in range(-self.sap_range,self.sap_range):\n",
+    "            for dy in range(-self.sap_range,self.sap_range):\n",
     "                if [pos[0]+dx,pos[1]+dy] in enemy_positions:\n",
-    "                    targets.append([dx,dy])\n",
+    "                    if relative:\n",
+    "                        targets.append([dx,dy])\n",
+    "                    else:\n",
+    "                        targets.append([pos[0]+dx,pos[1]+dy])\n",
     "        #print(pos, enemy_positions, targets)\n",
     "        return targets\n",
     "    def repath(self, unit_positions):\n",
@@ -876,7 +883,30 @@
     "            if self.unit_path[unit]:\n",
     "                self.unit_path[unit],_ = a_star(pos, self.unit_targets[unit], self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
     "                self.unit_path[unit].pop(0)\n",
-    "        \n",
+    "\n",
+    "    def free_target(self, unit, pos):\n",
+    "        if self.unit_has_target[unit]==1:\n",
+    "            self.relic_targets.append([int(self.unit_targets[unit][0]),int(self.unit_targets[unit][1])])\n",
+    "        if self.unit_has_target[unit]==2:\n",
+    "            self.fragment_targets.append([int(self.unit_targets[unit][0]),int(self.unit_targets[unit][1])])\n",
+    "            if self.compare_positions(pos, self.unit_targets[unit]):\n",
+    "                self.occupied_fragments.remove([int(self.unit_targets[unit][0]),int(self.unit_targets[unit][1])])\n",
+    "\n",
+    "    def preaim(self, pos):\n",
+    "        frags = self.relic_map.get_fragments(self.start_pos)\n",
+    "        if pos in frags:\n",
+    "            return pos\n",
+    "        frags = self.relic_map.get_fragments(self.start_pos, own=True)\n",
+    "        dist = np.sum(np.abs(np.array(frags)-np.array(pos)),axis=-1)\n",
+    "        target = frags[np.argsort(dist)[0]]\n",
+    "        path, _ = a_star(pos, target, self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
+    "        #print(pos, frags, dist, target, path)\n",
+    "        return path[1]\n",
+    "        '''if abs(target[0]-pos[0])>abs(target[1]-pos[1]):\n",
+    "            return [pos[0]+np.sign(target[0]-pos[0]), pos[1]]\n",
+    "        else:\n",
+    "            return [pos[0], pos[1]+np.sign(target[1]-pos[1])]'''\n",
+    "\n",
     "    def act(self, step: int, obs, remainingOverageTime: int = 60):\n",
     "        \"\"\"implement this function to decide what actions to send to each available unit. \n",
     "        \n",
@@ -899,7 +929,7 @@
     "        current_tile_map = obs[\"map_features\"][\"tile_type\"]\n",
     "        current_energy_map = obs[\"map_features\"][\"energy\"]\n",
     "        \n",
-    "\n",
+    "        \n",
     "        if step in [102,203,304,405]:\n",
     "            self.reset()\n",
     "            \n",
@@ -945,6 +975,11 @@
     "            self.locked_relic_targets = []\n",
     "            self.locked_fragment_targets = []\n",
     "            self.repath(unit_positions)\n",
+    "            \n",
+    "        for unit in available_unit_ids:\n",
+    "            if self.prev_actions[unit][0] in [1,2,3,4] and self.compare_positions(self.previous_positions[unit], unit_positions[unit]) and self.previous_energys[unit]>self.move_cost:\n",
+    "                    self.unit_path[unit],_ = a_star(unit_positions[unit], self.unit_targets[unit], self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
+    "                    self.unit_path[unit].pop(0)\n",
     "\n",
     "        all_targets = self.fragment_targets + self.relic_targets + self.explore_targets\n",
     "        release_count = len(all_targets)\n",
@@ -980,18 +1015,9 @@
     "                    self.unit_path[unit].pop(0)\n",
     "                else:\n",
     "                    self.unit_has_target[unit] = -1\n",
-    "            # free unit that is exploring if higher priority target is available\n",
-    "            if (self.unit_has_target[unit]==0) and release_count>0:\n",
-    "                release_count -= 1\n",
-    "                self.unit_has_target[unit]=-1\n",
     "            # free unit that has been killed and reissue targets if necessary\n",
     "            if self.unit_moved[unit] and self.compare_positions(pos, self.start_pos):\n",
-    "                if self.unit_has_target[unit]==1:\n",
-    "                    self.relic_targets.append([int(self.unit_targets[unit][0]),int(self.unit_targets[unit][1])])\n",
-    "                if self.unit_has_target[unit]==2:\n",
-    "                    self.fragment_targets.append([int(self.unit_targets[unit][0]),int(self.unit_targets[unit][1])])\n",
-    "                    if self.compare_positions(pos, self.unit_targets[unit]):\n",
-    "                        self.occupied_fragments.remove([int(self.unit_targets[unit][0]),int(self.unit_targets[unit][1])])\n",
+    "                self.free_target(unit, pos)\n",
     "                self.unit_has_target[unit] = -1\n",
     "                self.unit_moved[unit] = 0\n",
     "            # free unit that's on target and not occupying fragment (NOT DONE ANYMORE TO KEEP UNIT TYPE)\n",
@@ -1006,14 +1032,19 @@
     "                if self.unit_has_target[unit]==2:\n",
     "                    self.locked_fragment_targets.append([int(self.unit_targets[unit][0]),int(self.unit_targets[unit][1])])\n",
     "                self.unit_has_target[unit]=-1\n",
-    "            # remove if path empty (THIS SHOULDN'T HAPPEN)\n",
+    "            # remove if path empty (can happen if blocked by asteroid or pathing mistakes happens)\n",
     "            if not self.unit_path[unit] and self.unit_has_target[unit]<2:\n",
-    "                #print(\"path empty\")\n",
+    "                if self.unit_has_target[unit]==0:\n",
+    "                    self.n_explore_units += 1\n",
     "                self.unit_has_target[unit]=-1\n",
+    "                if not self.compare_positions(pos, self.unit_targets[unit]):\n",
+    "                    self.free_target(unit, pos)\n",
     "            # if unit has possible or known as target or no energy remove from available\n",
-    "            if self.unit_has_target[unit]>0 or unit_energys[unit]<self.move_cost:\n",
+    "            if self.unit_has_target[unit]>-1 or unit_energys[unit]<self.move_cost:\n",
     "                #print(\"remove unit\", unit)\n",
     "                available_unit_ids.remove(unit)\n",
+    "            if unit_energys[unit]<self.move_cost and not self.compare_positions(pos, self.unit_targets[unit]):\n",
+    "                self.free_target(unit, pos)\n",
     "            #print(\"after \", unit, pos, self.unit_has_target[unit], self.unit_targets[unit], self.unit_path[unit])\n",
     "            # if unit is available set path to nothing\n",
     "            #if self.unit_has_target[unit]==-1:\n",
@@ -1046,7 +1077,7 @@
     "        attack_targets = self.get_attack_targets()\n",
     "        # send remaining units to explore (first match) or target \n",
     "        for unit in available_unit_ids.copy():\n",
-    "            if self.unit_has_target[unit]!=0 and attack_targets:\n",
+    "            if not self.n_explore_units>0 and attack_targets:\n",
     "                target_id, path = self.find_best_unit(unit_positions[unit], np.arange(len(attack_targets)), attack_targets)\n",
     "                if path:\n",
     "                    self.unit_path[unit] = path[::-1]\n",
@@ -1060,6 +1091,7 @@
     "                self.unit_path[unit] = path[1:]\n",
     "                self.unit_has_target[unit] = 0\n",
     "                self.unit_targets[unit] = target\n",
+    "                self.n_explore_units -= 1\n",
     "            \n",
     "            \n",
     "            '''for unit in available_unit_ids:\n",
@@ -1074,17 +1106,20 @@
     "        # Decide on action. Follow path, if multiple units want to move to possible fragment only let one through, if attacking fire on enemy instead of moving\n",
     "        for unit in range(self.n_units):\n",
     "            unit_pos = unit_positions[unit]\n",
-    "            for node in self.unit_path[unit]:\n",
-    "                if self.tile_map.map[node[0],node[1]]==2 or (self.nebula_drain==25 and self.tile_map.map[node[0],node[1]]==1):\n",
-    "                    path, _ = a_star(unit_pos, self.unit_targets[unit], self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
-    "                    self.unit_path[unit] = path[1:]\n",
-    "                    break\n",
     "            if unit_mask[unit]:\n",
-    "                if self.get_enemy_targets(unit_pos.tolist(), enemy_positions):\n",
-    "                    targets = self.get_enemy_targets(unit_pos.tolist(), enemy_positions)\n",
-    "                    actions[unit]=[5,targets[0][0],targets[0][1]]\n",
+    "                for node in self.unit_path[unit]:\n",
+    "                    if self.tile_map.map[node[0],node[1]]==2 or (self.nebula_drain==25 and self.tile_map.map[node[0],node[1]]==1):\n",
+    "                        path, _ = a_star(unit_pos, self.unit_targets[unit], self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
+    "                        self.unit_path[unit] = path[1:]\n",
+    "                        break\n",
+    "                if (self.unit_has_target[unit]==3 or self.unit_has_target[unit]==2) and self.get_enemy_targets(unit_pos.tolist(), enemy_positions):\n",
+    "                    targets = self.get_enemy_targets(unit_pos.tolist(), enemy_positions, relative=False)\n",
+    "                    aim = self.preaim(targets[0])\n",
+    "                    actions[unit]=[5,aim[0]-unit_pos[0],aim[1]-unit_pos[1]]\n",
     "                else:\n",
-    "                    if self.unit_path[unit]:\n",
+    "                    if unit_energys[unit]<self.move_cost:\n",
+    "                        actions[unit]=[0,0,0]\n",
+    "                    elif self.unit_path[unit]:\n",
     "                        if self.relic_map.map_possibles[self.unit_path[unit][0][0],self.unit_path[unit][0][1]]==1:\n",
     "                            if discover_flag:\n",
     "                                actions[unit]=[0,0,0]\n",
@@ -1102,7 +1137,7 @@
     "                                discover_flag = 1\n",
     "                        else:\n",
     "                            actions[unit]=[0,0,0]\n",
-    "\n",
+    "        #print(\"Step: \", step, \"\\n\", self.unit_has_target, \"\\n\", self.unit_targets, \"\\n\", self.unit_path, \"\\n\", actions)\n",
     "        self.previous_energys = unit_energys\n",
     "        self.relic_map.map_occupied = np.zeros((24,24))\n",
     "        self.prev_points = team_points[self.team_id]\n",
@@ -1120,7 +1155,7 @@
    "outputs": [],
    "source": [
     "n = 50\n",
-    "evaluate_agents(Agent2, Agent3, seed=100, games_to_play=n, render=True)"
+    "evaluate_agents(Agent2, Agent3, seed=11, games_to_play=n, render=True)"
    ]
   },
   {
