targeting improved, fragment identification spawn in edge cases (probably) fixed

--- a/agent_dev.ipynb
+++ b/agent_dev.ipynb
@@ -39,7 +39,7 @@
     "    obs, info = env.reset(seed=seed)\n",
     "    total_wins = np.zeros((2))\n",
     "    for i in range(games_to_play):\n",
-    "        obs, info = env.reset()\n",
+    "        obs, info = env.reset(seed=seed+i)\n",
     "        env_cfg = info[\"params\"] # only contains observable game parameters\n",
     "        player_0 = agent_1_cls(\"player_0\", env_cfg)\n",
     "        player_1 = agent_2_cls(\"player_1\", env_cfg)\n",
@@ -348,7 +348,7 @@
     "        if not own:\n",
     "            return knowns.tolist()\n",
     "        own = []\n",
-    "        for k in knowns:\n",
+    "        for k in knowns.tolist():\n",
     "            if abs(k[0]-start[0])+abs(k[1]-start[1])<24:\n",
     "                own.append(k)\n",
     "        return own\n",
@@ -356,7 +356,7 @@
     "    def get_possibles(self, start, own=False):\n",
     "        poss = np.transpose((self.map_possibles==1).nonzero())\n",
     "        if not own:\n",
-    "            return poss\n",
+    "            return poss.tolist()\n",
     "        own = []\n",
     "        for k in poss.tolist():\n",
     "            if abs(k[0]-start[0])+abs(k[1]-start[1])<24:\n",
@@ -365,17 +365,18 @@
     "\n",
     "    def move_away(self, tile_map, pos):\n",
     "        moves = [1,2,3,4]\n",
+    "        moves_remain = moves.copy()\n",
     "        options = np.array([[pos[0],pos[1]-1],[pos[0]+1,pos[1]],[pos[0],pos[1]+1],[pos[0]-1,pos[1]]])\n",
     "        for ii, option in enumerate(options):\n",
     "            if np.max(option)>23 or np.min(option)<0 or (tile_map[option[0],option[1]]==2):\n",
-    "                moves.remove(ii+1)\n",
+    "                moves_remain.remove(ii+1)\n",
     "                continue\n",
     "            if self.map_knowns[option[0],option[1]]==1:\n",
     "                return moves[ii]\n",
     "            if self.map_possibles[option[0],option[1]]==0 and self.map_knowns[option[0],option[1]]==0:\n",
     "                return moves[ii]\n",
-    "        if moves:\n",
-    "            return moves[0]\n",
+    "        if moves_remain:\n",
+    "            return moves_remain[0]\n",
     "        return np.random.randint(1,5)\n",
     "        \n",
     "    def step(self, unit_positions, increase):\n",
@@ -386,12 +387,13 @@
     "        check_knowns = self.map_knowns.copy()\n",
     "        check_possibles = self.map_possibles.copy()\n",
     "        for unit in unit_positions:\n",
-    "            if check_knowns[unit[0],unit[1]]==1:\n",
-    "                ones += 1\n",
-    "                check_knowns[unit[0],unit[1]]=0\n",
-    "            if check_possibles[unit[0],unit[1]]==1:\n",
-    "                check_possibles[unit[0],unit[1]]=0\n",
-    "                S.append(unit)\n",
+    "            if unit[0]!=-1:\n",
+    "                if check_knowns[unit[0],unit[1]]==1:\n",
+    "                    ones += 1\n",
+    "                    check_knowns[unit[0],unit[1]]=0\n",
+    "                if check_possibles[unit[0],unit[1]]==1:\n",
+    "                    check_possibles[unit[0],unit[1]]=0\n",
+    "                    S.append(unit)\n",
     "        r1 = increase-ones\n",
     "        r2 = 0\n",
     "        c_sum = 0\n",
@@ -608,14 +610,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aeb7548-b1c6-4d76-8ac8-2386a79da9b8",
+   "id": "11483732-a6da-40bf-80df-b58982a89746",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(20):\n",
-    "    x = np.random.randint(0,24)\n",
-    "    y = np.random.randint(0,24-x)\n",
-    "    print(x,y, abs(x-23), abs(y-23), x+y, abs(x-23)+ abs(y-23))"
+    "t = []\n",
+    "p = []\n",
+    "for i in range(5):\n",
+    "    t.append([np.random.randint(0,24),np.random.randint(0,24)])\n",
+    "    p.append([np.random.randint(0,24),np.random.randint(0,24)])\n",
+    "def sort_targets(targets, positions):\n",
+    "    T = np.repeat(np.expand_dims(np.array(targets),axis=0),len(positions),axis=0)\n",
+    "    #print(T)\n",
+    "    P = np.tile(np.array(positions), len(targets)).reshape(len(positions),len(targets),2)\n",
+    "    dists = np.sum(np.abs(T-P),axis=2)\n",
+    "    best = np.min(dists,axis=0)\n",
+    "    #print(dists, \"\\n\", best)\n",
+    "    return (np.array(targets)[np.argsort(best)]).tolist()\n",
+    "ts = sort_targets(t, p)\n",
+    "a = np.zeros((24,24))\n",
+    "for pos in t:\n",
+    "    a[pos[0],pos[1]] = 1\n",
+    "for pos in p:\n",
+    "    a[pos[0],pos[1]] = -1\n",
+    "plt.imshow(a.T)\n",
+    "plt.show()\n",
+    "print(ts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cc57bfc-13b5-40a0-9001-a6d265e7e0f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [2,3]\n",
+    "b = [[2,3], [3,2]]\n",
+    "if a in b:\n",
+    "    print(\"k\")\n",
+    "    b.remove(a)\n",
+    "print(b)"
    ]
   },
   {
@@ -662,6 +697,7 @@
     "        \n",
     "        self.range = self.env_cfg[\"unit_sensor_range\"]\n",
     "        self.sap_range = self.env_cfg[\"unit_sap_range\"]\n",
+    "        self.sap_cost = self.env_cfg[\"unit_sap_cost\"]\n",
     "        self.width = self.env_cfg[\"map_width\"]\n",
     "        self.height = self.env_cfg[\"map_height\"]\n",
     "        a = np.stack((np.repeat(np.arange(24),24,axis=0).reshape((24,24)), np.repeat(np.arange(24),24,axis=0).reshape((24,24)).T),axis=2)\n",
@@ -892,6 +928,17 @@
     "            if self.compare_positions(pos, self.unit_targets[unit]):\n",
     "                self.occupied_fragments.remove([int(self.unit_targets[unit][0]),int(self.unit_targets[unit][1])])\n",
     "\n",
+    "    def sort_targets(self, targets, positions):\n",
+    "        \n",
+    "        if targets and positions:\n",
+    "                T = np.repeat(np.expand_dims(np.array(targets),axis=0),len(positions),axis=0)\n",
+    "                P = np.tile(np.array(positions), len(targets)).reshape(len(positions),len(targets),2)\n",
+    "                dists = np.sum(np.abs(T-P),axis=2)\n",
+    "                best = np.min(dists,axis=0)\n",
+    "                return (np.array(targets)[np.argsort(best)]).tolist()\n",
+    "        else:\n",
+    "            return []\n",
+    "\n",
     "    def preaim(self, pos):\n",
     "        frags = self.relic_map.get_fragments(self.start_pos)\n",
     "        if pos in frags:\n",
@@ -948,7 +995,7 @@
     "                #self.relic_targets.extend(self.relic_to_targets(observed_relic_node_positions[ii]))\n",
     "                self.relic_targets.extend(self.relic_map.get_possibles(self.start_pos, own=True))\n",
     "                # remove duplicates from relic targets\n",
-    "                self.relic_targets = list({array.tobytes(): array for array in np.array(self.relic_targets)}.values())\n",
+    "                self.relic_targets = np.array(list({array.tobytes(): array for array in np.array(self.relic_targets)}.values())).tolist()\n",
     "                #print(step, self.discovered_relic_nodes_ids, \"\\n\", self.relic_targets, \"\\n\",  self.unit_has_target, \"\\n\",  self.unit_targets)\n",
     "        # update maps\n",
     "        available_unit_ids = np.where(unit_mask)[0].tolist()\n",
@@ -981,10 +1028,10 @@
     "                    self.unit_path[unit],_ = a_star(unit_positions[unit], self.unit_targets[unit], self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
     "                    self.unit_path[unit].pop(0)\n",
     "\n",
-    "        all_targets = self.fragment_targets + self.relic_targets + self.explore_targets\n",
-    "        release_count = len(all_targets)\n",
+    "\n",
+    "        #release_count = len(all_targets)\n",
     "        for unit in available_unit_ids.copy():\n",
-    "            pos = unit_positions[unit]\n",
+    "            pos = [int(unit_positions[unit][0]), int(unit_positions[unit][1])]\n",
     "            #print(\"before \", pos, unit, self.unit_has_target[unit], self.unit_targets[unit], self.unit_path[unit])\n",
     "            # set moved flag necessary for kill detection\n",
     "            if not self.compare_positions(pos, self.start_pos):\n",
@@ -1000,12 +1047,15 @@
     "                self.unit_has_target[unit] = 2\n",
     "                self.unit_targets[unit] = pos\n",
     "                self.unit_path[unit] = []\n",
-    "                self.occupied_fragments.append([pos[0], pos[1]])\n",
+    "                self.occupied_fragments.append([int(pos[0]), int(pos[1])])\n",
     "                remain_units = available_unit_ids.copy()\n",
     "                remain_units.remove(unit)\n",
     "                for unit2 in remain_units:\n",
     "                    if self.unit_targets[unit2][0]==pos[0] and self.unit_targets[unit2][1]==pos[1] and self.unit_has_target[unit]!=3:\n",
     "                        self.unit_has_target[unit2] = -1\n",
+    "            # remove target if possible fragment has been cleared (by other unit)\n",
+    "            if self.unit_has_target[unit]==1 and self.relic_map.map_possibles[self.unit_targets[unit][0], self.unit_targets[unit][1]]==0 and self.relic_map.map_knowns[self.unit_targets[unit][0], self.unit_targets[unit][1]]!=1:\n",
+    "                self.unit_has_target[unit] = -1\n",
     "            # retarget def units\n",
     "            if self.unit_has_target[unit]==3 and self.compare_positions(self.unit_targets[unit],pos):\n",
     "                if self.fragment_locations:\n",
@@ -1040,7 +1090,7 @@
     "                if not self.compare_positions(pos, self.unit_targets[unit]):\n",
     "                    self.free_target(unit, pos)\n",
     "            # if unit has possible or known as target or no energy remove from available\n",
-    "            if self.unit_has_target[unit]>-1 or unit_energys[unit]<self.move_cost:\n",
+    "            if self.unit_has_target[unit]==2 or unit_energys[unit]<self.move_cost:\n",
     "                #print(\"remove unit\", unit)\n",
     "                available_unit_ids.remove(unit)\n",
     "            if unit_energys[unit]<self.move_cost and not self.compare_positions(pos, self.unit_targets[unit]):\n",
@@ -1049,24 +1099,48 @@
     "            # if unit is available set path to nothing\n",
     "            #if self.unit_has_target[unit]==-1:\n",
     "            #    self.unit_path[unit] = []\n",
-    "\n",
+    "            \n",
+    "        self.fragment_targets = self.relic_map.get_fragments(self.start_pos, own=True)\n",
+    "        self.relic_targets = self.relic_map.get_possibles(self.start_pos, own=True)\n",
+    "        #print(self.occupied_fragments, self.fragment_targets)\n",
+    "        for f in self.fragment_targets.copy():\n",
+    "            if self.tile_map.map[f[0],f[1]]==2 or f in self.occupied_fragments:\n",
+    "                self.fragment_targets.remove(f)\n",
+    "                #print(f, \" removed\")\n",
+    "        for r in self.relic_targets.copy():\n",
+    "            if self.tile_map.map[r[0],r[1]]==2:\n",
+    "                self.relic_targets.remove(r)\n",
+    "        #print(self.occupied_fragments, self.fragment_targets)\n",
     "        #print(available_unit_ids)\n",
     "        # send available units to fragments, possibles, explore targets\n",
-    "        all_targets = self.fragment_targets + self.relic_targets + self.explore_targets\n",
+    "        positions = []\n",
+    "        for u in available_unit_ids:\n",
+    "            positions.append(unit_positions[u])\n",
+    "        #print(self.sort_targets(self.fragment_targets, positions))\n",
+    "        #print(step)\n",
+    "        #print(self.fragment_targets)\n",
+    "        #print(self.sort_targets(self.relic_targets, positions))\n",
+    "        #print(self.relic_targets)\n",
+    "        all_targets = self.sort_targets(self.fragment_targets, positions) + self.sort_targets(self.relic_targets, positions) + self.explore_targets\n",
     "        target_type = [2 for i in range(len(self.fragment_targets))] + [1 for i in range(len(self.relic_targets))] + [0 for i in range(len(self.explore_targets))]\n",
+    "        #print(all_targets)\n",
     "        for ii, goal in enumerate(all_targets):\n",
     "            if available_unit_ids:\n",
     "                unit, path = self.find_best_unit(goal, available_unit_ids, unit_positions)\n",
     "                available_unit_ids.remove(unit)\n",
+    "                self.free_target(unit, unit_positions[unit])\n",
     "                self.unit_path[unit] = path[1:]\n",
     "                self.unit_has_target[unit] = target_type[ii]\n",
     "                self.unit_targets[unit] = goal\n",
+    "                #try:\n",
     "                if target_type[ii]==2:\n",
     "                    self.fragment_targets.remove(goal)\n",
     "                if target_type[ii]==1:\n",
     "                    self.relic_targets.remove(goal)\n",
     "                if target_type[ii]==0:\n",
     "                    self.explore_targets.remove(goal)\n",
+    "                #except:\n",
+    "                #print(target_type[ii], goal, self.fragment_targets, self.relic_targets, self.explore_targets)\n",
     "        \n",
     "        # only keep targets that aren't exploring\n",
     "        for unit in available_unit_ids.copy():\n",
@@ -1112,7 +1186,7 @@
     "                        path, _ = a_star(unit_pos, self.unit_targets[unit], self.tile_map.map, self.energy_map.map, self.move_cost, self.nebula_drain)\n",
     "                        self.unit_path[unit] = path[1:]\n",
     "                        break\n",
-    "                if (self.unit_has_target[unit]==3 or self.unit_has_target[unit]==2) and self.get_enemy_targets(unit_pos.tolist(), enemy_positions):\n",
+    "                if unit_energys[unit]>self.sap_cost and (self.unit_has_target[unit]==3 or (self.unit_has_target[unit]==2 and self.energy_map.map[unit_pos[0],unit_pos[1]]>0)) and self.get_enemy_targets(unit_pos.tolist(), enemy_positions):\n",
     "                    targets = self.get_enemy_targets(unit_pos.tolist(), enemy_positions, relative=False)\n",
     "                    aim = self.preaim(targets[0])\n",
     "                    actions[unit]=[5,aim[0]-unit_pos[0],aim[1]-unit_pos[1]]\n",
@@ -1122,7 +1196,11 @@
     "                    elif self.unit_path[unit]:\n",
     "                        if self.relic_map.map_possibles[self.unit_path[unit][0][0],self.unit_path[unit][0][1]]==1:\n",
     "                            if discover_flag:\n",
-    "                                actions[unit]=[0,0,0]\n",
+    "                                if self.relic_map.map_possibles[unit_pos[0],unit_pos[1]]==1:\n",
+    "                                    actions[unit] = self.relic_map.move_away(self.tile_map.map, [unit_pos[0],unit_pos[1]])\n",
+    "                                    self.unit_path[unit].insert(0, unit_pos)\n",
+    "                                else:\n",
+    "                                    actions[unit]=[0,0,0]\n",
     "                            else:\n",
     "                                actions[unit] = [direction_to(unit_pos, self.unit_path[unit].pop(0)), 0, 0]\n",
     "                                discover_flag=1\n",
@@ -1131,13 +1209,20 @@
     "                    else:\n",
     "                        if self.relic_map.map_possibles[unit_pos[0],unit_pos[1]]==1:\n",
     "                            if discover_flag:\n",
-    "                                actions[unit] = self.relic_map.move_away([unit_pos[0],unit_pos[1]])\n",
+    "                                actions[unit] = self.relic_map.move_away(self.tile_map.map, [unit_pos[0],unit_pos[1]])\n",
+    "                                self.unit_path[unit].insert(0, unit_pos)\n",
     "                            else:\n",
     "                                actions[unit]=[0,0,0]\n",
     "                                discover_flag = 1\n",
     "                        else:\n",
     "                            actions[unit]=[0,0,0]\n",
-    "        #print(\"Step: \", step, \"\\n\", self.unit_has_target, \"\\n\", self.unit_targets, \"\\n\", self.unit_path, \"\\n\", actions)\n",
+    "        '''print(\"Step: \", step, \"\\n\", self.unit_has_target, \"\\n\", self.unit_targets, \"\\n\", self.unit_path, \"\\n\", actions)\n",
+    "        plt.imshow(self.relic_map.map_possibles.T)\n",
+    "        plt.show()\n",
+    "        plt.imshow(self.relic_map.map_confidence.T)\n",
+    "        plt.show()\n",
+    "        plt.imshow(self.relic_map.map_knowns.T)\n",
+    "        plt.show()'''\n",
     "        self.previous_energys = unit_energys\n",
     "        self.relic_map.map_occupied = np.zeros((24,24))\n",
     "        self.prev_points = team_points[self.team_id]\n",
@@ -1155,7 +1240,7 @@
    "outputs": [],
    "source": [
     "n = 50\n",
-    "evaluate_agents(Agent2, Agent3, seed=11, games_to_play=n, render=True)"
+    "evaluate_agents(Agent2, Agent3, seed=390396746, games_to_play=n, render=True)"
    ]
   },
   {
