ppo progress, maybe...

--- a/agent_dev.ipynb
+++ b/agent_dev.ipynb
@@ -44,8 +44,8 @@
     "        start = time.time()\n",
     "        obs, info = env.reset(seed=seed+i)\n",
     "        env_cfg = info[\"params\"] # only contains observable game parameters\n",
-    "        player_0 = agent_1_cls(\"player_0\", env_cfg)\n",
-    "        player_1 = agent_2_cls(\"player_1\", env_cfg, model_name=model_name)\n",
+    "        player_0 = agent_1_cls(\"player_0\", env_cfg, model_name=model_name)\n",
+    "        player_1 = agent_2_cls(\"player_1\", env_cfg)\n",
     "    \n",
     "        # main game loop\n",
     "        game_done = False\n",
@@ -757,7 +757,7 @@
    "source": [
     "n = 50\n",
     "bug = 976553406\n",
-    "evaluate_agents(Agent2, ProxyAgent, seed=42, games_to_play=n, render=True, model_name=\"models/test_model\")"
+    "evaluate_agents(ProxyAgent, Agent2, seed=42, games_to_play=n, render=True, model_name=\"models/test_model6\")"
    ]
   },
   {
